--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: ''
+      repo: '',
+      loadSidebar: true,
+      coverpage: true
     }
   </script>
   <!-- Docsify v4 -->
